
Libraries 8.x-3.x, xxxx-xx-xx
-----------------------------
#2390301 by rjacobs: Fix DrupalUnitTestBase no longer exists so tests can't load
#2332157 by tstoeckler: Add a composer.json.
#2287529 by drupalshrek, tstoeckler: Update installation link in README.txt.
by tstoeckler: Fix tests.
#2309203 by JayeshSolanki: Replace removed functions with module handler service.
#2290767 by yukare: Replace removed cache() function.
#2183087 by tstoeckler, rjacobs: Update for removed core functions.
by tstoeckler: Fix tests.
by tstoeckler: Provide required 'type' key in test library info file.
#2090351 by tstoeckler: Remove obsolete hook_flush_caches().
#2090425 by tstoeckler: Adapt for renamed ControllerInterface.
#2090323 by tstoeckler: Remove obsolete libraries_parse_dependency().
#2090379 by tstoeckler: Change 'pattern' to 'path' in routing YAML file.
#2058371 by gordon: Re-port to Drupal 8 (.info.yml, controllers, cache service, ...).
#1779714 by tstoeckler, klonos: Wrong filepath in README.txt and fix JS testing.
#1167496 by tstoeckler: Remove leftover libraries.test file.
#1167496 by tstoeckler, benshell: Port to Drupal 8.


Libraries 7.x-3.x, xxxx-xx-xx
-----------------------------
#1938638 by tstoeckler: Remove unneeded check.


Libraries 7.x-2.x, xxxx-xx-xx
-----------------------------
#2352251 by netw3rker: Fix incorrect hook name in libraries.api.php.
#2352237 by netw3rker, tstoeckler: Allow clearing the libraries cache from Drush.
#2193969 by tstoeckler: Avoid warnings for stale library caches.
#2287529 by drupalshrek, tstoeckler: Update installation link in README.txt.

Libraries 7.x-2.2, 2014-02-09
-----------------------------
#2046919 by tstoeckler: Clarify 'version' docs.
#1946110 by munroe_richard: Allow uppercase letters as library machine names.
#1953260 by tstoeckler: Improve documentation of libraries_get_version().
#1855918 by tstoeckler: Make integration file loading backwards-compatible.
#1876124 by tstoeckler: Fix integration files for themes.