@@ -680,6 +680,9 @@ function libraries_load_files($library) {
         if (!isset($options['group'])) {
           $options['group'] = ($type == 'js') ? JS_DEFAULT : CSS_AGGREGATE_DEFAULT;
         }
+        if ($type === 'js') {
+          $options['version'] = -1;
+        }
         // @todo Avoid the usage of _drupal_add_js() and _drupal_add_css()
         call_user_func('_drupal_add_' . $type, $data, $options);
         $count++;
