@@ -1,36 +1,36 @@
 libraries_test_files:
   path: '/libraries_test/files'
   defaults:
-    _content: Drupal\libraries_test\Controller\ExampleController::files
+    _controller: Drupal\libraries_test\Controller\ExampleController::files
   requirements:
     _access: 'TRUE'
 libraries_test_integration_files:
   path: '/libraries_test/integration_files'
   defaults:
-    _content: Drupal\libraries_test\Controller\ExampleController::integration
+    _controller: Drupal\libraries_test\Controller\ExampleController::integration
   requirements:
     _access: 'TRUE'
 libraries_test_versions:
   path: '/libraries_test/versions'
   defaults:
-    _content: Drupal\libraries_test\Controller\ExampleController::versions
+    _controller: Drupal\libraries_test\Controller\ExampleController::versions
   requirements:
     _access: 'TRUE'
 libraries_test_variant:
   path: '/libraries_test/variant'
   defaults:
-    _content: Drupal\libraries_test\Controller\ExampleController::variant
+    _controller: Drupal\libraries_test\Controller\ExampleController::variant
   requirements:
     _access: 'TRUE'
 libraries_test_versions_and_variants:
   path: '/libraries_test/versions_and_variants'
   defaults:
-    _content: Drupal\libraries_test\Controller\ExampleController::versionsAndVariants
+    _controller: Drupal\libraries_test\Controller\ExampleController::versionsAndVariants
   requirements:
     _access: 'TRUE'
 libraries_test_cache:
   path: '/libraries_test/cache'
   defaults:
-    _content: Drupal\libraries_test\Controller\ExampleController::cache
+    _controller: Drupal\libraries_test\Controller\ExampleController::cache
   requirements:
     _access: 'TRUE'
